# plan9rs

./: README.md
header/: build.sh  dat.h  dat.rs  dat.zig  dat_rs.h  dat_zig.h  fns.h
k10/: Cargo.toml  LICENSE  Makefile  build.rs  x86_64-unknown-none.json
k10/.cargo/: config.toml
k10/iso/: k10  limine.cfg
k10/src/: lib.rs  macros.rs  panic.rs  taslock.rs  tod.rs
k10/src/arch/: mod.rs
k10/src/arch/amd64/: asm.rs  cga.rs  l.S  map.rs  mod.rs  vsvm.rs
k10/src/arch/amd64/assembly/: Makefile  boot.S  entry.S  l64vsyscall.S
k10/src/arch/amd64/assembly/sic/: entry.S  kernel.ld
k10/src/arch/amd64/dat/: chan.rs  mem.rs  mmmu.rs  mod.rs  proc.rs  qlock.rs  sys.rs  waitq.rs
k10/src/arch/x86_64/: asm.rs  edf.rs  fns.rs  map.rs  mod.rs  multiboot.rs  serial.rs  vga.rs
k10/src/arch/x86_64/assembly/: Makefile  l64idt.S  l64v.S  mod.rs
k10/src/arch/x86_64/dat/: image.rs  label.rs  mach.rs  mem.rs  page.rs  perf.rs  segment.rs
