[package]
name = "k10"
version = "0.1.0"
edition = "2021"

[lib]
name = "k10"
path = "src/lib.rs"

[[bin]]
name = "k10"
path = "bin/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
spin = "0.5.2"
uart_16550 = "0.2.16"
volatile = "0.2.6"
x86_64 = "0.14.2"
x86 = "0.47.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
